# rust-proof

./: .gitignore  Cargo.toml  PHASE_1_BUILD_PLAN.md  PHASE_2_BUILD_PLAN.md  PHASE_3_BUILD_PLAN.md  PHASE_4_BUILD_PLAN.md  README.md  ROADMAP.md
.cargo/: config.toml
data/: db
docs/: advanced_cryptography.md  architecture.md  chapter_01.md  chapter_02.md  chapter_03.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  embedded-libp2p-implementation-guide.md  embedded-libp2p-profile.md  privacy.md  system-design.md
docs/adr/: 0001-core-node-boundary.md
erp-runtime/: Cargo.toml  README.md  sdkconfig.defaults
erp-runtime/.cargo/: config.toml
erp-runtime/src/: button.rs  led.rs  lib.rs  main.rs  storage.rs  time.rs  utils.rs
erp-runtime/src/identity/: manager.rs
erp-runtime/src/network/: bootstrap.rs  config.rs  errors.rs  manager.rs  mod.rs  peer_registry.rs  session.rs  transport_identity.rs
erp-runtime/src/network/codec/: framed.rs  length_prefixed.rs  mod.rs  postcard_codec.rs
erp-runtime/src/network/protocol/: announce.rs  identify.rs  mod.rs  node_hello.rs  ping.rs  sync.rs
erp-runtime/src/network/socket/: esp_idf.rs  mod.rs  traits.rs
erp-runtime/src/network/transport/: mod.rs  multistream.rs  noise.rs  yamux.rs
erp-runtime/src/runtime/: block_signing.rs  errors.rs  host.rs  manager.rs  mod.rs  node.rs
erp-runtime/src/storage/: errors.rs  manager.rs  mod.rs  nvs_storage.rs
erp-runtime/src/wake/: manager.rs
rp-client/: Cargo.toml  README.md
rp-client/src/: main.rs
rp-codec/: Cargo.toml
rp-codec/src/: length_prefixed.rs  lib.rs  postcard.rs
rp-core/: Cargo.toml  README.md
rp-core/docs/: architecture.md  chapter_04.md  chapter_08.md  programmability.md
rp-core/src/: blockchain.rs  crypto.rs  errors.rs  lib.rs  main.rs  state.rs  storage.rs  traits.rs
rp-core/src/models/: block.rs  slashing.rs  transaction.rs
rp-node/: Cargo.toml  README.md
rp-node/src/: blockchain.rs  contract.rs  errors.rs  lib.rs  mempool.rs  node.rs  node_engine.rs  storage.rs
rp-node/src/network/: message.rs
rp-runtime/: Cargo.toml  README.md
rp-runtime/src/: lib.rs  main.rs  storage.rs
rp-runtime/src/network/: config.rs  manager.rs  mod.rs
rp-runtime/src/network/codec/: length_prefixed.rs  mod.rs  postcard.rs
rp-runtime/src/runtime/: errors.rs  manager.rs  mod.rs
rp-runtime/src/storage/: manager.rs  mod.rs
rust-proof-client/: Cargo.toml  README.md
rust-proof-client/src/: main.rs
rust-proof-core/: README.md
rust-proof-core/docs/: chapter_01.md  chapter_03.md  governance_interoperability.md  scalability.md
rust-proof-core/src/: blockchain.rs  state.rs
rust-proof-core/src/models/: transaction.rs
rust-proof-core/src/network/: manager.rs  message.rs
src/: blockchain.rs  lib.rs  main.rs  mempool.rs  node.rs  state.rs  storage.rs  traits.rs
src/models/: block.rs  mod.rs  slashing.rs  transaction.rs
src/network/: manager.rs  message.rs
