[workspace]
resolver = "2"
members = [
    "rust-proof-core",
    "rust-proof-client",
    "erp-client",
]
default-members = [
    "rust-proof-core",
    "rust-proof-client",
]

[profile.dev.package.erp]
debug = true
opt-level = "z"

[profile.release.package.erp]
opt-level = "s"

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", branch = "master" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", branch = "master" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git", branch = "master" }