[package]
name = "rp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
rand = "0.8.5"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
sled = "0.34.7"
libp2p = { version = "0.56.0", features = [
    "tokio",
    "gossipsub",
    "kad",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "request-response",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
# bincode = "3.0.0"

[dev-dependencies]
tempfile = "3.10.1"
