[package]
name = "rp-node"
version = "0.1.0"
edition = "2024"

[dependencies]
rp-core = { path = "../rp-core" }
serde = { version = "1.0.228", features = ["derive"] }
spin = "0.10.0"
postcard = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
rand = "0.8.5"

[lib]
path = "src/lib.rs"
