[package]
name = "rp-runtime"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rp-core = { path = "../rp-core" }
rp-node = { path = "../rp-node" }
tokio = { version = "1.49.0", features = ["full"] }
sled = "0.34.7"
libp2p = { version = "0.56.0", features = [
	"tokio",
	"gossipsub",
	"kad",
	"tcp",
	"noise",
	"yamux",
	"macros",
	"request-response",
	"json",
] }
serde_json = "1.0.149"

[dev-dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
rand = "0.8.5"
tempfile = "3.10.1"

[[bin]]
name = "rp-runtime"
path = "src/main.rs"